# adapter-feishu

./: .pre-commit-config.yaml  .prettierrc  README.md  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/actions/build-api-doc/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: codecov.yml  pyright.yml  release-drafter.yml  release.yml  ruff.yml  website-deploy.yml  website-preview.yml
codegen/: config.py  main.py
codegen/templates/: model.py.jinja
nonebot/adapters/feishu/: __init__.py  adapter.py  bot.py  config.py  event.py  exception.py  message.py  utils.py
nonebot/adapters/feishu/models/: __init__.py  api.py  common.py
nonebot/adapters/feishu/ws/: __init__.py  client.py  frame.proto  frame.py  frame_pb2.py  models.py
scripts/: build-api-docs.sh  build_api_docs.py
tests/: conftest.py  events.json  fake_server.py  junit.xml  test_feishu_bot.py  test_feishu_connection.py  test_feishu_event.py  test_feishu_utils.py  test_feishu_ws.py
tests/data/: bots.json  bots_info.json  events.json  payloads.json
website/: docusaurus.config.js  package.json  sidebars.js  versions.json
website/docs/guide/: configuration.md  installation.md  setup.md
website/src/pages/: changelog.md
website/versioned_docs/version-2.0.0-beta.1/api/: adapter.md  bot.md  config.md  event.md  message.md
website/versioned_docs/version-2.0.0-beta.1/guide/: setup.md
website/versioned_docs/version-2.0.0-beta.2/api/: config.md  event.md
website/versioned_docs/version-2.0.0-beta.3/api/: bot.md  exception.md  rule.md
website/versioned_docs/version-2.0.0-beta.3/api/plugin/: on.md
website/versioned_docs/version-2.0.0-beta.5/api/: config.md  event.md  utils.md
website/versioned_docs/version-2.0.0-beta.5/guide/: installation.md  setup.md
website/versioned_docs/version-2.0.0-beta.6/api/: adapter.md  config.md  exception.md  message.md
website/versioned_docs/version-2.0.0-beta.7/api/: adapter.md  bot.md  event.md  exception.md  message.md  utils.md
website/versioned_docs/version-2.0.0-beta.8/api/: adapter.md  bot.md  message.md  utils.md
website/versioned_docs/version-2.0.0-beta.8/guide/: setup.md
website/versioned_docs/version-2.0.0/api/: bot.md
website/versioned_docs/version-2.0.1/api/: bot.md  event.md
website/versioned_docs/version-2.0.2/api/: message.md
website/versioned_docs/version-2.1.1/api/: bot.md  message.md
website/versioned_docs/version-2.1.2/api/: message.md
website/versioned_docs/version-2.2.0/api/: adapter.md
website/versioned_docs/version-2.2.1/api/: config.md  message.md
website/versioned_docs/version-2.3.0/api/: adapter.md  bot.md  message.md
website/versioned_docs/version-2.3.1/guide/: setup.md
website/versioned_docs/version-2.4.0/guide/: setup.md
website/versioned_docs/version-2.4.2/api/: adapter.md  message.md
website/versioned_docs/version-2.5.0/api/: message.md
website/versioned_docs/version-2.6.0/api/: message.md
website/versioned_docs/version-2.6.1/api/: bot.md
website/versioned_docs/version-2.6.2/api/: utils.md
website/versioned_docs/version-2.6.2/api/models/: api.md
website/versioned_docs/version-2.6.2/guide/: setup.md
website/versioned_docs/version-2.7.1/api/: bot.md  config.md
website/versioned_docs/version-2.7.1/api/ws/: frame_pb2.md
website/versioned_docs/version-2.7.2/api/: event.md  index.md
website/versioned_docs/version-2.7.2/api/models/: common.md  index.md
website/versioned_docs/version-2.7.2/api/ws/: client.md  index.md  models.md
website/versioned_docs/version-2.7.2/guide/: README.md
website/versioned_sidebars/: version-2.0.0-beta.1-sidebars.json  version-2.0.0-beta.2-sidebars.json  version-2.0.0-beta.3-sidebars.json  version-2.0.0-beta.4-sidebars.json  version-2.0.0-beta.5-sidebars.json  version-2.0.0-beta.6-sidebars.json  version-2.0.0-beta.7-sidebars.json  version-2.0.0-beta.8-sidebars.json  version-2.0.0-sidebars.json  version-2.0.1-sidebars.json  version-2.0.2-sidebars.json  version-2.7.1-sidebars.json
